--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -16,6 +16,7 @@
         app:lottie_loop="true"/>
 
     <androidx.fragment.app.FragmentContainerView
+        android:visibility="invisible"
         android:id="@+id/fragmentContainerView"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
